fix: корректировка application.yaml checkstyle: